# post-quantum-projects

./: README.md
dsa/: CMakeLists.txt  Dockerfile  Dockerfile.fuzz  Dockerfile.wheels  Makefile  PQC-ROADMAP.md  README.md  docker-compose.yml  pyproject.toml
dsa/docs/: COMPOSITE_CERTIFICATES_PLAN.md  DEVELOPER.md  Dockerfile.docs  Doxyfile  FIRMWARE_PROTECTION.md  MANUAL.md  SECURITY_ASSESSMENT.md  SECURITY_AUDIT.md  index.md  mainpage.md  mkdocs.yml
dsa/docs/api/: mldsa.md  mlkem.md  slhdsa.md
dsa/docs/dev/: building.md
dsa/docs/guide/: installation.md  quickstart.md
dsa/examples/app/: Dockerfile  Dockerfile.cpp  client.py  server.py
dsa/examples/cpp/: generate_keys.cpp  mlkem_demo.cpp
dsa/examples/py/: api_authentication.py  comparison.py  document_signing.py  generate_keys.py  key_exchange.py
dsa/examples/use-cases/api-signing/: README.md  sign.sh  sign_request.py  verify_request.py
dsa/examples/use-cases/code-signing/: Dockerfile  README.md  sign.sh  sign_release.cpp  sign_release.py  verify.sh  verify_release.cpp  verify_release.py
dsa/examples/use-cases/document-signing/: README.md  sign.sh  sign_document.cpp  sign_document.py  verify.sh  verify_document.cpp  verify_document.py
dsa/examples/use-cases/firmware-signing/: README.md  sign.sh  sign_firmware.cpp  sign_firmware.py  verify.sh  verify_firmware.cpp  verify_firmware.py
dsa/examples/use-cases/pqc-token/: README.md  create_token.sh  pqc_token.cpp  pqc_token.py  verify_pqc_token.cpp  verify_token.sh
dsa/src/cpp/: CMakeLists.txt  ct_utils.hpp  key_encryption.hpp  main.cpp  sign.cpp  verify.cpp
dsa/src/cpp/bindings/: common.hpp  mldsa_module.cpp  mlkem_module.cpp  slhdsa_module.cpp
dsa/src/cpp/common/: algorithm_factory.hpp  asn1.hpp  batch_verify.hpp  composite.hpp  cose.hpp  fips_selftest.hpp  hsm.hpp  hybrid.hpp  jose.hpp  ossl_provider.hpp  pem.hpp  pkcs8.hpp  simd_detect.hpp  streaming.hpp  x509.hpp
dsa/src/cpp/mldsa/: encoding.hpp  mldsa.hpp  ntt_avx2.hpp  ntt_neon.hpp  sampling.hpp
dsa/src/cpp/mlkem/: compress.hpp  encode.hpp  kpke.hpp  mlkem.hpp  ntt.hpp  ntt_avx2.hpp  ntt_neon.hpp  params.hpp  sampling.hpp  utils.cpp  utils.hpp
dsa/src/cpp/slhdsa/: ct_utils.hpp  fors.hpp  hash_functions.cpp  hypertree.hpp  slh_dsa.hpp
dsa/src/py/: __init__.py
dsa/src/py/mldsa/: __init__.py  _mldsa_native.pyi
dsa/src/py/mlkem/: __init__.py
dsa/src/py/slhdsa/: __init__.py  _slhdsa_native.pyi
dsa/tests/benchmarks/: README.md  bench_mldsa.py  bench_mlkem.py  bench_slhdsa.py
dsa/tests/cpp/: benchmark.cpp  test_algorithm_factory.cpp  test_batch_verify.cpp  test_composite.cpp  test_edge_cases.cpp  test_fips_selftest.cpp  test_hsm.cpp  test_hybrid.cpp  test_interop.cpp  test_jose_cose.cpp  test_keygen.cpp  test_mlkem.cpp  test_ossl_provider.cpp  test_pkcs8.cpp  test_simd.cpp  test_streaming.cpp  test_x509.cpp
dsa/tests/examples/: test_api_signing.py  test_code_signing.py  test_document_signing.py  test_firmware_signing.py  test_pqc_token.py
dsa/tests/fuzz/: fuzz_asn1.cpp  fuzz_composite.cpp  fuzz_mldsa_verify.cpp  fuzz_mlkem_decaps.cpp  fuzz_mlkem_encaps.cpp  fuzz_slhdsa_verify.cpp
dsa/tests/py/: test_cross_validation.py  test_keygen.py  test_liboqs_cross_validation.py  test_mldsa.py  test_mldsa_native.py  test_mlkem.py  test_slhdsa.py  test_slhdsa_native.py
dsa/tests/timing/: dudect.h  test_constant_time.cpp
